<resources>
    <string name="app_name" translatable="false">What\'s that Flag?</string>
    <string name="loading_text">Loading</string>
    <string name="category_text">Category: %1$s \</string>
    <string name="score_text" translatable="false">%1$d</string>
    <string name="questions_text" translatable="false">%1$d</string>
    <string name="button_text" translatable="false">%1$s</string>
    <string name="countries_amount">Countries: %1$s \</string>
    <string name="countries_all">all</string>
    <string name="start_btn_text" translatable="false">Start</string>
    <string name="title_text" translatable="false">What\'s that Flag?</string>
    <string name="logo_text" translatable="false">W T F</string>
    <string name="select_continent_text">Select a region \</string>
    <string name="radio_text_global">Global</string>
    <string name="radio_text_asia">Asia</string>
    <string name="radio_text_europe">Europe</string>
    <string name="radio_text_americas">Americas</string>
    <string name="radio_text_africa">Africa</string>
    <string name="radio_text_oceania">Oceania</string>
    <string name="github_source_text">Source</string>
    <string name="dialog_info_follow_text">Follow me on GitHub for more!</string>
    <string name="dialog_info_author_text">Developed by Aleksander Wozniak</string>
    <string name="alert_start_internet_error_title">Connection error!</string>
    <string name="alert_start_internet_error_msg">Make sure you are connected to Internet, then restart the App</string>
    <string name="alert_start_internet_error_btn_neg">Exit</string>
    <string name="alert_menu_info_btn_pos">Back</string>
    <string name="alert_game_summary_title">Summary</string>
    <string name="alert_game_summary_message">You scored %1$d out of %2$d (%3$d%%)</string>
    <string name="alert_game_summary_btn_pos">Continue</string>
    <string name="alert_game_back_title">Return</string>
    <string name="alert_game_back_message">Do you want to return to menu?</string>
    <string name="alert_game_back_btn_pos">Yes</string>
    <string name="alert_game_back_btn_neg">No</string>
    <string name="alert_game_internet_error_msg">Make sure you are connected to Internet, then press %1$s</string>
    <string name="alert_game_internet_error_btn_pos">OK</string>
    <string name="alert_game_internet_error_btn_neg">Exit App</string>
    <string name="toast_game_oceania_max_flags">There are only %1$d countries in Oceania</string>
    <string name="toast_game_error_load_next_flag">Loading new flag due to an error</string>
    <string name="toast_game_reload_img">Reattempting image loading</string>
    <string name="toast_game_flag_skipped">Skipped a flag - %1$s</string>
    <string name="toast_start_offline_mode_enabled">Downloaded flags, offline mode is now enabled</string>
    <string name="showcase_wtfbtn_title">Detailed info</string>
    <string name="showcase_questions_title">Remaining flags</string>
    <string name="showcase_score_title">Your score</string>
    <string name="link_wikipedia">https://en.wikipedia.org/wiki/%1$s</string>
    <string-array name="list_of_countries">
        <item>Algeria</item>
        <item>Angola</item>
        <item>Benin</item>
        <item>Botswana</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cameroon</item>
        <item>Cape Verde</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Comoros</item>
        <item>Republic of the Congo</item>
        <item>Democratic Republic of the Congo</item>
        <item>Djibouti</item>
        <item>Egypt</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Ethiopia</item>
        <item>Gabon</item>
        <item>The Gambia</item>
        <item>Ghana</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Ivory Coast</item>
        <item>Kenya</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Mali</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Namibia</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>Rwanda</item>
        <item>Sahrawi Arab Democratic Republic</item>
        <item>São Tomé and Príncipe</item>
        <item>Senegal</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Somalia</item>
        <item>Somaliland</item>
        <item>South Africa</item>
        <item>South Sudan</item>
        <item>Sudan</item>
        <item>Swaziland</item>
        <item>Tanzania</item>
        <item>Togo</item>
        <item>Tunisia</item>
        <item>Uganda</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
        <item>Afghanistan</item>
        <item>Armenia</item>
        <item>Republic of Artsakh</item>
        <item>Azerbaijan</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Bhutan</item>
        <item>Brunei</item>
        <item>Cambodia</item>
        <item>China</item>
        <item>Christmas Island</item>
        <item>Cocos (Keeling) Islands</item>
        <item>Cyprus</item>
        <item>East Timor</item>
        <item>Georgia (country)</item>
        <item>Hong Kong</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Israel</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Lebanon</item>
        <item>Macau</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mongolia</item>
        <item>Myanmar</item>
        <item>Nepal</item>
        <item>Northern Cyprus</item>
        <item>North Korea</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>State of Palestine</item>
        <item>Philippines</item>
        <item>Qatar</item>
        <item>Saudi Arabia</item>
        <item>Singapore</item>
        <item>South Korea</item>
        <item>South Ossetia</item>
        <item>Sri Lanka</item>
        <item>Syria</item>
        <item>Taiwan</item>
        <item>Tajikistan</item>
        <item>Thailand</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>United Arab Emirates</item>
        <item>Uzbekistan</item>
        <item>Vietnam</item>
        <item>Yemen</item>
        <item>Åland Islands</item>
        <item>Albania</item>
        <item>Andorra</item>
        <item>Austria</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Bosnia and Herzegovina</item>
        <item>Bulgaria</item>
        <item>Croatia</item>
        <item>Czech Republic</item>
        <item>Denmark</item>
        <item>Estonia</item>
        <item>Faroe Islands</item>
        <item>Finland</item>
        <item>France</item>
        <item>Germany</item>
        <item>Gibraltar</item>
        <item>Greece</item>
        <item>Guernsey</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>Republic of Ireland</item>
        <item>Isle of Man</item>
        <item>Italy</item>
        <item>Jersey</item>
        <item>Kosovo</item>
        <item>Latvia</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Republic of Macedonia</item>
        <item>Malta</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Montenegro</item>
        <item>Netherlands</item>
        <item>Norway</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>San Marino</item>
        <item>Serbia</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Spain</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Transnistria</item>
        <item>Ukraine</item>
        <item>United Kingdom</item>
        <item>Vatican City</item>
        <item>Anguilla</item>
        <item>Antigua and Barbuda</item>
        <item>Aruba</item>
        <item>The Bahamas</item>
        <item>Barbados</item>
        <item>Belize</item>
        <item>Bermuda</item>
        <item>British Virgin Islands</item>
        <item>Canada</item>
        <item>Cayman Islands</item>
        <item>Costa Rica</item>
        <item>Cuba</item>
        <item>Curaçao</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>El Salvador</item>
        <item>Greenland</item>
        <item>Grenada</item>
        <item>Guatemala</item>
        <item>Haiti</item>
        <item>Honduras</item>
        <item>Jamaica</item>
        <item>Mexico</item>
        <item>Montserrat</item>
        <item>Nicaragua</item>
        <item>Panama</item>
        <item>Puerto Rico</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Sint Maarten</item>
        <item>Trinidad and Tobago</item>
        <item>Turks and Caicos Islands</item>
        <item>United States</item>
        <item>United States Virgin Islands</item>
        <item>Argentina</item>
        <item>Bolivia</item>
        <item>Brazil</item>
        <item>Chile</item>
        <item>Colombia</item>
        <item>Ecuador</item>
        <item>Falkland Islands</item>
        <item>Guyana</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>South Georgia and the South Sandwich Islands</item>
        <item>Suriname</item>
        <item>Uruguay</item>
        <item>Venezuela</item>
        <item>American Samoa</item>
        <item>Australia</item>
        <item>Cook Islands</item>
        <item>Fiji</item>
        <item>French Polynesia</item>
        <item>Guam</item>
        <item>Kiribati</item>
        <item>Marshall Islands</item>
        <item>Federated States of Micronesia</item>
        <item>Nauru</item>
        <item>New Zealand</item>
        <item>Niue</item>
        <item>Norfolk Island</item>
        <item>Northern Mariana Islands</item>
        <item>Palau</item>
        <item>Papua New Guinea</item>
        <item>Pitcairn Islands</item>
        <item>Samoa</item>
        <item>Solomon Islands</item>
        <item>Tokelau</item>
        <item>Tonga</item>
        <item>Tuvalu</item>
        <item>Vanuatu</item>
    </string-array>
</resources>